Make Alexii changes and a come qol

--- a/src/app/components/submission_forms.css
+++ b/src/app/components/submission_forms.css
@@ -1,13 +1,10 @@
 .submission{
-    width: 65%;
-    margin: 10px auto;
-
+    margin: auto;
     ul{
         list-style-type: none;
         margin: 0;
-        padding-left: 0;
+        padding-left: 5%;
     }
-
     button{
         background-color: coral;
         color: white;
@@ -19,6 +16,7 @@
         margin: 10px;
         font-size: medium;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        transition: 200ms;
     }
 
     button:hover {
@@ -34,11 +32,9 @@
         box-sizing: border-box;
         background-color: white;
     }
-
     input:focus{
         background-color: rgb(185, 255, 255);
     }
-
     label{
         padding-right: 1%;
     }
