--- a/src/app/components/poll/poll.component.css
+++ b/src/app/components/poll/poll.component.css
@@ -7,7 +7,7 @@
     margin: auto;
     margin-top: 5px;
     padding: 5px;
-    overflow-y: scroll;
+    overflow: hidden;
     scroll-snap-type: both mandatory;
     scroll-snap-align: start none;
     scroll-margin-block: 10px;
@@ -35,27 +35,39 @@
     margin: auto;
     margin-top: 10px;
     padding: 10px;
+    padding-bottom: 5%;
     overflow: hidden;
-    scroll-snap-type: y mandatory;
+    scroll-snap-type: both mandatory;
     scroll-snap-align: start none;
     scroll-margin-block: 10px;
-}
-
-.poll_question {
-    font-weight: bold;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin: auto;
-    padding-bottom: 10px;
+    color:black;
+    scale: 1.0;
+    opacity: 1.0;
+    transition: 500ms;
+    align-items: center;
+    align-content: center;
+    
 }
 
 .poll_option {
-    list-style-type: circle;
+    opacity: 0;
+    visibility: hidden;
+    list-style-type: none;
+    transition: 200ms;
 }
+
+.poll_element:hover .poll_option {
+    visibility: visible;
+    opacity: 1;
+    transition: 200ms;
+}
+
 
 .create_poll_question {
     font-weight: bold;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     padding-right: 0.5%;
+    padding-top: 10;
 }
 
 .create-button{
