--- a/src/app/components/poll/poll.component.html
+++ b/src/app/components/poll/poll.component.html
@@ -1,15 +1,16 @@
 <div class="main_page">
+
+  <button (click)="pollCreation.hidden = !pollCreation.hidden" class="create-button">
+    {{ pollCreation.hidden ? 'Create Your Own Poll' : 'Hide Poll Creation' }}
+  </button>
+
   <div class="submission">
     @if (errorMessage) {
       <p style="color: red;">{{ errorMessage }}</p>
     }
     
-    <button (click)="pollCreation.hidden = !pollCreation.hidden">
-      {{ pollCreation.hidden ? 'Create Your Own Poll' : 'Hide Poll Creation' }}
-    </button>
-    
     <div #pollCreation [hidden]="true">
-      <label for="question">Question</label>
+      <label class="create_poll_question" for="question">Question:</label>
       <input type="text" id="question" name="question" [(ngModel)]="questionField">
       <ul>
         @for (op of optionsFields; track i; let i = $index) {
@@ -33,15 +34,13 @@
       <p class="poll_question">{{ poll.question }}</p>
       <!--For every option inside this poll, repeat this list element-->
       <ul *ngFor="let option of poll.options">
-        <li class="poll_option" [class.user-voted]="poll.user_vote === option.option_id">
-          <button (click)="vote(poll, option)" [disabled]="poll.user_vote">
+        <li class="poll_option">
+          <button 
+            (click)="poll.user_vote === option.option_id ? removeVote(poll, option) : vote(poll, option)" 
+            [disabled]="poll.user_vote && poll.user_vote !== option.option_id || voteTimeout"
+            [style.background-color]="poll.user_vote === option.option_id ? 'lightgreen' : ''">
             {{option.content}} - {{option.vote_count}}
           </button>
-          @if(poll.user_vote === option.option_id){
-            <button (click)="removeVote(poll, option)">
-              Remove Vote
-            </button>
-          }
         </li>
       </ul>
     </div>
