--- a/src/styles.css
+++ b/src/styles.css
@@ -27,45 +27,28 @@ body, html {
 
 }
 
-ul.header_button {
-    position: sticky;
-    top: 10px;
+.page div.header ul {
     list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    
-    
-}
-
-
-
-ul.header_button li {
     float: unset;
+    align-items: center;
 }
 
-ul.header_button li a {
+
+.page div.header ul li a {
     display: block;
     color: black;
-    background-color: rgb(158, 218, 238);
+    background-color: rgb(51, 180, 223);
     text-align: center;
     padding: 20px 25px;
     border-radius: 50px;
     margin: 10px;
     text-decoration: none;
+    transition: 500ms;
 }
 
-ul.header_button li a:hover {
-    background-color: rgb(118, 167, 184);
-}
-
-
-
-.down_gradient {
-    background-image: linear-gradient(to bottom, rgba(255, 0, 0,1), rgba(245,245,245,0));
-    height: 30px;
-    width: 150%;
-    display: block;
+.page div.content {
+    grid-area: content;
+    width: 100%;
     
 }
 
