--- a/src/app/components/poll/poll.component.css
+++ b/src/app/components/poll/poll.component.css
@@ -23,7 +23,8 @@
     color: rgb(8, 21, 32);
     font-weight: bold;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin: auto;
+    text-align: center;
+    margin: 15px auto 10px auto;
     
 }
 
@@ -35,7 +36,6 @@
     margin: auto;
     margin-top: 10px;
     padding: 10px;
-    padding-bottom: 5%;
     overflow: hidden;
     scroll-snap-type: both mandatory;
     scroll-snap-align: start none;
@@ -54,10 +54,53 @@
     visibility: hidden;
     list-style-type: none;
     transition: 200ms;
+    margin-bottom: 5px;
+    display: flex;
+    justify-content: center;
 }
 
 .poll_element:hover .poll_option {
     visibility: visible;
     opacity: 1;
     transition: 200ms;
+}
+
+.vote-box {
+    
+    color: rgb(255, 255, 255);
+    background-color:  rgb(27, 162, 207);
+    border-radius: 20px;
+    transition: 200ms;
+    border-width: 0px;
+    border-color: rgb(0, 0, 0);
+    padding-right: 5px;
+    padding-left: 15px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-size: large;
+    border-style: solid;
+    width: 85%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}   
+
+.vote-box:hover {
+    background-color:  rgb(233, 235, 111);
+    scale: 1.06;
+    color: black;
+    transition: 500ms;
+    border-width: 3px;
+}
+
+.vote-count-box {
+    background-color: rgba(0, 0, 0, 0.1);
+    padding: 5px 10px;
+    border-radius: 10px;
+    margin-left: 10px;
+}
+
+.poll_element ul {
+    padding: 0;
 }
