--- a/src/app/components/poll/poll.component.html
+++ b/src/app/components/poll/poll.component.html
@@ -6,8 +6,9 @@
         (click)="onVoteClick(option)" 
         [disabled]="isVoteDisabled(option)"
         [style.background-color]="poll.user_vote === option.option_id ? 'lightgreen' : ''"
-        [class.vote-box]="!showControls">
-        {{option.content}} - {{option.vote_count}}
+        class="vote-box">
+        <span>{{option.content}}</span>
+        <span class="vote-count-box">{{option.vote_count}}</span>
       </button>
     </li>
   </ul>
