--- a/src/app/components/summary/summary.component.html
+++ b/src/app/components/summary/summary.component.html
@@ -1,5 +1,5 @@
 <div>
-    <p class="alt-text"> Username: {{username}} | Polls Made: {{userPolls.length}} | Polls Done: {{votedPolls.length}} </p>
+    <p class="alt-text"> Username: {{username}} | Polls Made: {{userPolls.length}} | Polls Voted: {{votedPolls.length}} </p>
 
     <button (click)="logOut()" class="logout">Log Out</button>
 
