--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -15,7 +15,7 @@
         <input type="password" id="signup-password-confirmation" name="signup-password-confirmation" [(ngModel)]="confirmPasswordField">
       </li>
       <br>
-      <button (click)="signUp()">Submit</button>
+      <button (click)="signUp()">Sign Up</button>
 
       @if (errorMessage) {
         <p style="color: red;">{{ errorMessage }}</p>
