--- a/src/app/components/poll-list/poll-list.component.html
+++ b/src/app/components/poll-list/poll-list.component.html
@@ -29,8 +29,7 @@
   <div class="poll-list" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="50" (scrolled)="onScrollDown()">
     <app-poll 
       *ngFor="let poll of allPolls" 
-      [poll]="poll"
-      (error)="onError($event)">
+      [poll]="poll">
     </app-poll>
   </div>
 </div>
