--- a/src/app/components/poll/poll.component.html
+++ b/src/app/components/poll/poll.component.html
@@ -19,4 +19,8 @@
       <button (click)="onToggleVisibility()">{{ poll.is_visible ? 'Make Private' : 'Make Public' }}</button>
     </div>
   }
+
+  @if (errorMessage) {
+    <p style="color: red; text-align: center; margin-top: 10px;">{{ errorMessage }}</p>
+  }
 </div>
