User should be able to move to signup/login screens while already logged in - QOL

--- a/src/app/components/summary/summary.component.html
+++ b/src/app/components/summary/summary.component.html
@@ -35,16 +35,14 @@
     </div>
 
     @if (viewMode === 'created') {
-        <app-poll 
-            *ngFor="let poll of userPolls" 
+        <app-poll *ngFor="let poll of userPolls" 
             [poll]="poll"
             [showControls]="true"
             (deletePollClicked)="deletePoll($event)"
             (toggleVisibilityClicked)="toggleVisibility($event)">
         </app-poll>
     } @else if (viewMode === 'voted') {
-        <app-poll 
-            *ngFor="let poll of votedPolls" 
+        <app-poll *ngFor="let poll of votedPolls" 
             [poll]="poll">
         </app-poll>
     }
