--- a/src/app/components/poll/poll.component.html
+++ b/src/app/components/poll/poll.component.html
@@ -1,4 +1,5 @@
 <div class="poll_element">
+  <p>Created by: {{poll.username}}</p>
   <p class="poll_question">{{ poll.question }}</p>
   <ul *ngFor="let option of poll.options">
     <li class="poll_option" [class.user-voted]="poll.user_vote === option.option_id">
