--- a/src/app/components/poll-list/poll-list.component.css
+++ b/src/app/components/poll-list/poll-list.component.css
@@ -6,6 +6,7 @@
 }
 
 .create-button{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     position: fixed;
     background-color: coral;
     color: white;
