--- a/src/styles.css
+++ b/src/styles.css
@@ -35,6 +35,8 @@ body, html {
 
 
 .page div.header ul li a {
+    /* Credit to W3schools for the box shadow, it works well as is*/
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     display: block;
     color: black;
     background-color: rgb(51, 180, 223);
@@ -65,5 +67,16 @@ div.up-gradient {
     position: fixed;
     bottom: 0;
     z-index: 10;
+    align-items: center;
     background-image: linear-gradient(to top, whitesmoke, whitesmoke, rgba(245, 245, 245, 0.753), rgba(245, 245, 245, 0));
+}
+div.fish{
+    position: absolute;
+    top: 50%;
+    width: 100%;;
+    text-align: center;
+    font-size: xx-large;
+    color: rgb(51, 180, 223);
+    scale: 1;
+    text-shadow: 2px 2px 4px #6a7b8b;
 }
