--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -34,6 +34,7 @@
 
 
 .page div.header ul li a {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     display: block;
     color: black;
     background-color: rgb(51, 180, 223);
