--- a/src/app/components/poll-list/poll-list.component.css
+++ b/src/app/components/poll-list/poll-list.component.css
@@ -1,5 +1,6 @@
 .create_poll_question {
     font-weight: bold;
+    font-size: larger;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     padding-right: 0.5%;
     padding-top: 10;
