--- a/src/app/components/poll-list/poll-list.component.html
+++ b/src/app/components/poll-list/poll-list.component.html
@@ -1,29 +1,28 @@
 <div class="main_page">
 
-  <button (click)="pollCreation.hidden = !pollCreation.hidden" class="create-button">
-    {{ pollCreation.hidden ? 'Create Your Own Poll' : 'Hide Poll Creation' }}
-  </button>
-
   <div class="submission">
-    @if (errorMessage) {
-      <p style="color: red;">{{ errorMessage }}</p>
-    }
-    
-    <div #pollCreation [hidden]="true">
-      <label class="create_poll_question" for="question">Question:</label>
-      <input type="text" id="question" name="question" [(ngModel)]="questionField">
+      <div class="LI-row">
+        <label class="create_poll_question" for="question">Question:</label>
+        <input type="text" id="question" name="question" [(ngModel)]="questionField">
+      </div>
+
       <ul>
         @for (op of optionsFields; track i; let i = $index) {
-          <li>
-            <label for="option">Option {{i+1}}:</label>
-            <input type="text" id="option" name="option" [(ngModel)]="optionsFields[i]">
-          </li>
-          <br>
+            <div class="LI-row">
+              <label for="option">Option {{i+1}}:</label>
+              <input type="text" id="option" name="option" [(ngModel)]="optionsFields[i]">
+            </div>
         }
-        <button (click)="addOptionField()">Add Option</button>
-        <button (click)="createNewPoll()">Create Poll</button>
+
+        <div class="button-row">
+          <button (click)="addOptionField()">Add Option</button>
+          <button (click)="createNewPoll()">Create Poll</button>
+        </div>
       </ul>
-    </div>
+
+      @if (errorMessage) {
+      <p style="color: red;">{{ errorMessage }}</p>
+    }
   </div>
   
   <div class="poll-list" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="50" (scrolled)="onScrollDown()">
