--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -2,19 +2,18 @@
   <div class="submission">
   <form>
     <ul>
-      <li>
-        <label for="signup-username">Username</label>
-        <input type="text" id="signup-username" name="signup-username" [(ngModel)]="usernameField">
-      </li>
-      <li>
-        <label for="signup-password">Password</label>
-        <input type="password" id="signup-password" name="signup-password" [(ngModel)]="passwordField">
-      </li>
-      <li>
-        <label for="signup-password-confirmation">Retype Password</label>
-        <input type="password" id="signup-password-confirmation" name="signup-password-confirmation" [(ngModel)]="confirmPasswordField">
-      </li>
-      <br>
+        <div class="LI-row">
+          <label for="signup-username">Username</label>
+          <input type="text" id="signup-username" name="signup-username" [(ngModel)]="usernameField">
+        </div>
+        <div class="LI-row">
+          <label for="signup-password">Password</label>
+          <input type="password" id="signup-password" name="signup-password" [(ngModel)]="passwordField">
+        </div>
+        <div class="LI-row">
+          <label for="signup-password-confirmation">Retype Password</label>
+          <input type="password" id="signup-password-confirmation" name="signup-password-confirmation" [(ngModel)]="confirmPasswordField">
+        </div>
       <button (click)="signUp()">Sign Up</button>
 
       @if (errorMessage) {
