--- a/src/app/components/submission_forms.css
+++ b/src/app/components/submission_forms.css
@@ -1,9 +1,10 @@
 .submission{
     margin: auto;
     ul{
-        list-style-type: none;
-        margin: 0;
-        padding-left: 5%;
+        margin-top: 10px;
+        padding-left: 0;
+        text-align: center;
+        width: 100%;
     }
     button{
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -12,12 +13,17 @@
         border: none;
         cursor: pointer;
         text-align: center;
-        padding: 20px 25px;
+        padding: 15px 15px;
         border-radius: 50px;
-        margin: 10px;
+        margin: 8px;
         font-size: medium;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         transition: 200ms;
+    }
+    .button-row {
+        display: flex;
+        justify-content: center;
+        width: 100%;
     }
 
     button:hover {
@@ -27,49 +33,47 @@
     }
     input{
         padding: 12px 20px;
-        margin: 8px 0;
-        display: inline-block;
         border: 1px solid #ccc;
         box-sizing: border-box;
         background-color: white;
+        border-radius: 4px;
+        width: 90%;
     }
     input:focus{
         background-color: rgb(185, 255, 255);
     }
     label{
-        padding-right: 1%;
+        text-align: right;
+        font-weight: bold;
+        color: #333;
     }
-    button.logout {
-    align-items: center;
-    align-self: center;
-    align-content: center;
-}
-.logout {
-    display: block;
-    background-color: rgb(0, 0, 0);
-    color: white;
-    border: none;
-    cursor: pointer;
-    text-align: center;
-    padding: 20px 25px;
-    border-radius: 50px;
-    margin: 10px;
-    font-size: medium;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    transition: 200ms;
-}
 
-.logout:hover{
-    transition: 500ms;
-    background-color: rgb(255, 72, 0);
-    scale: 1.05;
-}
+    .LI-row {
+        display: grid;
+        grid-template-columns: 150px 1fr;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        margin-bottom: 10px;
+        width: 100%;
+    }
+    
+
 }
 
 div.submission {
+    display: flex;
+    flex-direction: column;
     align-self: center;
     align-items: center;
-    width: 60%;
+    width: 55%;
+    min-width: 400px;
+
+    background-color: #f9f9f9;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 15px;
+    padding: 20px 20px 10px 20px;
+    border: 1px solid #e0e0e0;
 }
 
 .alt-text {
