Added a remove last option button

--- a/src/app/components/poll-list/poll-list.component.html
+++ b/src/app/components/poll-list/poll-list.component.html
@@ -16,6 +16,7 @@
 
         <div class="button-row">
           <button (click)="addOptionField()">Add Option</button>
+          <button (click)="removeOptionField()">Remove last Option</button>
           <button (click)="createNewPoll()">Create Poll</button>
         </div>
       </ul>
